<?xml version="1.0" encoding="utf-8"?>
<com.baizhi.baseapp.widget.NavigationBarView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabHost"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   
    <LinearLayout
        android:id="@android:id/tabs"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/tab_color"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/shouye"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_main_selector"
            android:text="@string/tab_shouye_tip"
            android:textColor="@color/tab_selector"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/wen"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_wen_selector"
            android:text="@string/tab_wen_tip"
            android:textColor="@color/tab_selector"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/si"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_si_selector"
            android:text="@string/tab_si_tip"
            android:textColor="@color/tab_selector"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/xiu"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_xiu_selector"
            android:text="@string/tab_xiu_tip"
            android:textColor="@color/tab_selector"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/wo"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_wo_selector"
            android:text="@string/tab_wo_tip"
            android:textColor="@color/tab_selector"/>
    </LinearLayout>

    <com.baizhi.baseapp.widget.MyViewPager
        android:id="@+id/tabContent"
        android:layout_width="match_parent"
        android:layout_above="@android:id/tabs"
        android:layout_height="wrap_content" />

</com.baizhi.baseapp.widget.NavigationBarView>