<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mScrollView"
    >
    <com.sunquan.chimingfazhou.widget.KeyboardLayout
        android:id="@+id/mKeyboardLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <include
        android:id="@+id/login_top"
        layout="@layout/activity_register_top_layout"
        />
    <RelativeLayout
        android:id="@+id/country"
        style="@style/account_edittext_style"
        android:layout_below="@id/login_top"
        android:layout_width="match_parent"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        >
        <EditText
            android:drawableLeft="@drawable/account_country"
            style="@style/account_edittext_style"
            android:layout_width="fill_parent"
            android:background="#00ffffff"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:hint="@string/register_country_str1"
            android:textColorHint="#A9A9A9"
            android:focusable="false"
            />
        <TextView
            android:layout_toLeftOf="@+id/r"
            style="@style/account_edittext_style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00ffffff"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:hint="@string/register_country_str2"
            android:maxLength="11"
            android:paddingLeft="12.0dip"
            android:textColorHint="#E9E9E9"
            />
        <com.baizhi.baseapp.widget.RecyclingImageView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account_r"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/input_account"
        android:layout_below="@id/country"
        style="@style/account_edittext_style"
        android:layout_width="fill_parent"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        >
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="#ffc0c3c4"
            />
        <EditText
            style="@style/account_edittext_style"
            android:drawableLeft="@drawable/account"
            android:id="@+id/lgoin_accounts"
            android:layout_width="fill_parent"
            android:background="#00ffffff"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:hint="@string/account"
            android:maxLength="13"
            android:maxLines="1"
            android:inputType="phone"
            />
        <com.baizhi.baseapp.widget.RecyclingImageView
            android:id="@+id/account_del_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account_del"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/input_password"
        android:layout_below="@id/input_account"
        style="@style/account_edittext_style"
        android:layout_width="fill_parent"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        >
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="#ffc0c3c4"
            />
        <EditText
            style="@style/account_edittext_style"
            android:id="@+id/lgoin_password"
            android:drawableLeft="@drawable/account_password"
            android:layout_width="fill_parent"
            android:background="#00ffffff"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:hint="@string/password"
            android:maxLength="16"
            android:maxLines="1"
            android:textColorHint="#A9A9A9"
            android:inputType="textPassword"
            />
        <com.baizhi.baseapp.widget.RecyclingImageView
            android:id="@+id/password_del_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account_del"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/forgive_password"
        android:layout_below="@+id/input_password"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        >
        <View
            android:id="@+id/split"
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="#ffc0c3c4"
            />
        <TextView
            android:id="@+id/forgive_password_click"
            android:layout_below="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:textColor="#5C6F98"
            android:text="@string/forget_password"
            android:layout_marginTop="3.0dp"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingBottom="10dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_bottom"
        android:layout_below="@+id/forgive_password"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/login"
            style="@style/login_button_style"
            android:background="@drawable/xiu_counter_blue_selector"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:id="@+id/user_register"
            style="@style/login_button_style"
            android:background="@drawable/xiu_counter_blue_selector"
            android:text="@string/register_new_use"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

    </com.sunquan.chimingfazhou.widget.KeyboardLayout>

</ScrollView>
