<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:id="@+id/register_scroll"
    >
    <RelativeLayout
        android:id="@+id/country"
        android:layout_below="@+id/login_top"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:background="#ffffff"
        >
        <TextView
            style="@style/account_edittext_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:hint="@string/register_country_str1"
            android:maxLength="11"
            android:paddingLeft="12.0dip"
            android:paddingRight="0dp"
            />
        <TextView
            style="@style/account_edittext_style"
            android:layout_toLeftOf="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:hint="@string/register_country_str2"
            android:maxLength="11"
            android:paddingLeft="12dp"
            android:paddingRight="0dp"
            android:textColorHint="@color/register_hint_color"
            />
        <com.baizhi.baseapp.widget.RecyclingImageView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account_r"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_account"
        android:layout_below="@+id/country"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:background="#ffffff"
        >
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="#ffc0c3c4"
            />
        <EditText
            style="@style/account_edittext_style"
            android:id="@+id/forgive_input_tel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:hint="@string/account"
            android:maxLength="13"
            android:maxLines="1"
            android:inputType="phone"
            android:paddingLeft="12.0dip"
            android:paddingRight="0dp"
            />
        <com.baizhi.baseapp.widget.RecyclingImageView
            android:id="@+id/account_del_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account_del"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/input_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/forgive_next"
            style="@style/login_button_style"
            android:layout_height="50dp"
            android:background="@drawable/xiu_counter_blue_selector"
            android:text="@string/forgive_next"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

</RelativeLayout>
